@@ -854,6 +854,8 @@ ROW   |23631 |3   |                 |                                           
 ROW   |23632 |3   |                 |                                                           |10091 |Average read latency of the datastore $3                         |vmware.hv.datastore.read[{$URL},{HOST.HOST},{#DATASTORE},latency]              |60   |90     |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |2    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23633 |3   |                 |                                                           |10091 |Average write latency of the datastore $3                        |vmware.hv.datastore.write[{$URL},{HOST.HOST},{#DATASTORE},latency]             |60   |90     |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |2    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23667 |3   |                 |                                                           |10091 |Health state rollup                                              |vmware.hv.sensor.health.state[{$URL},{HOST.HOST}]                              |60   |90     |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |13        |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |0    |NULL       |    |The host health state rollup sensor value: gray - unknown, ok, red - it has a problem, yellow - it might have a problem.                                                                                                                                                                                                                                                                                                                  |0             |30      |0                  |0                  |                  |0       |
+ROW   |23669 |3   |                 |                                                           |10091 |Total size of datastore $3                                       |vmware.hv.datastore.size[{$URL},{HOST.HOST},{#DATASTORE}]                      |60   |90     |365   |0     |3         |             |B       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |2    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
+ROW   |23670 |3   |                 |                                                           |10091 |Free space on datastore $3 (percentage)                          |vmware.hv.datastore.size[{$URL},{HOST.HOST},{#DATASTORE},pfree]                |60   |90     |365   |0     |0         |             |%       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |2    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23634 |5   |                 |                                                           |10047 |Zabbix vmware cache, % free                                      |zabbix[vmware,buffer,pfree]                                                    |60   |7      |365   |0     |0         |             |%       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23636 |16  |                 |                                                           |10082 |jvm Name                                                         |jmx["java.lang:type=Runtime",VmName]                                           |3600 |7      |0     |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23637 |16  |                 |                                                           |10082 |os Process CPU Load                                              |jmx["java.lang:type=OperatingSystem",ProcessCpuLoad]                           |60   |7      |365   |0     |0         |             |%       |1         |0    |                   |0                   |                     |                     |100    |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
@@ -3089,6 +3091,8 @@ ROW   |5887     |412          |25330 |
 ROW   |5888     |418          |25365 |
 ROW   |5889     |418          |23667 |
 ROW   |5890     |328          |23668 |
+ROW   |5891     |445          |23669 |
+ROW   |5892     |445          |23670 |
 
 TABLE |mappings
 FIELDS|mappingid|valuemapid|value|newvalue                              |
@@ -3392,6 +3396,8 @@ ROW   |209            |23608 |23600        |
 ROW   |218            |23632 |23631        |
 ROW   |219            |23633 |23631        |
 ROW   |220            |23666 |23665        |
+ROW   |221            |23669 |23631        |
+ROW   |222            |23670 |23631        |
 
 TABLE |host_discovery
 FIELDS|hostid|parent_hostid|parent_itemid|
